@@ -5,51 +5,58 @@
 
 package com.vmware.connectors.airwatch;
 
-import com.google.common.collect.ImmutableList;
-import com.vmware.connectors.mock.MockRestServiceServer;
+import com.vmware.connectors.mock.MockWebServerWrapper;
 import com.vmware.connectors.test.ControllerTestsBase;
-import com.vmware.connectors.test.JsonReplacementsBuilder;
+import com.vmware.connectors.test.JsonNormalizer;
+import okhttp3.mockwebserver.MockWebServer;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.ApplicationContextInitializer;
+import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.core.io.Resource;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
+import org.springframework.test.context.support.TestPropertySourceUtils;
 import org.springframework.test.web.client.ResponseActions;
-import org.springframework.test.web.client.match.MockRestRequestMatchers;
-import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
+import org.springframework.test.web.reactive.server.WebTestClient;
+import org.springframework.web.reactive.function.BodyInserters;
 
+import java.io.IOException;
+import java.nio.charset.Charset;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import static com.vmware.connectors.test.JsonSchemaValidator.isValidHeroCardConnectorResponse;
 import static org.hamcrest.CoreMatchers.any;
-import static org.hamcrest.CoreMatchers.containsString;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.springframework.http.HttpHeaders.*;
 import static org.springframework.http.HttpMethod.*;
 import static org.springframework.http.HttpStatus.*;
-import static org.springframework.hateoas.MediaTypes.HAL_JSON_UTF8;
-import static org.springframework.http.MediaType.APPLICATION_FORM_URLENCODED;
-import static org.springframework.http.MediaType.APPLICATION_JSON;
+import static org.springframework.http.MediaType.*;
 import static org.springframework.test.web.client.ExpectedCount.times;
-import static org.springframework.test.web.client.match.MockRestRequestMatchers.method;
-import static org.springframework.test.web.client.match.MockRestRequestMatchers.requestTo;
+import static org.springframework.test.web.client.match.MockRestRequestMatchers.*;
 import static org.springframework.test.web.client.response.MockRestResponseCreators.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.request;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static uk.co.datumedge.hamcrest.json.SameJSONAs.sameJSONAs;
 
 /**
  * Created by harshas on 9/20/17.
  */
 @TestPropertySource(locations = {"classpath:app.properties"})
+@ContextConfiguration(initializers = AirWatchControllerTest.CustomInitializer.class)
 class AirWatchControllerTest extends ControllerTestsBase {
+
+    private static final MediaType HAL_JSON_UTF8 = MediaType.valueOf("application/hal+json;charset=UTF-8");
 
     @Value("classpath:airwatch/responses/awAppInstalled.json")
     private Resource awAppInstalled;
@@ -69,15 +76,21 @@ class AirWatchControllerTest extends ControllerTestsBase {
     @Value("classpath:greenbox/responses/installApp.json")
     private Resource gbInstallApp;
 
-    private com.vmware.connectors.mock.MockRestServiceServer mockBackend;
+    private static MockWebServerWrapper mockGreenbox;
 
-    private final static String AIRWATCH_BASE_URL = "https://air-watch.acme.com";
-    private final static String GREENBOX_BASE_URL = "https://herocard.vmwareidentity.com";
+    @BeforeAll
+    static void createMock() {
+        mockGreenbox = new MockWebServerWrapper(new MockWebServer());
+    }
 
     @BeforeEach
-    void init() throws Exception {
-        super.setup();
-        mockBackend = MockRestServiceServer.bindTo(requestHandlerHolder).ignoreExpectOrder(true).build();
+    void resetGreenbox() {
+        mockGreenbox.reset();
+    }
+
+    @AfterEach
+    void verifyMock() {
+        mockGreenbox.verify();
     }
 
     @ParameterizedTest
@@ -89,51 +102,41 @@ class AirWatchControllerTest extends ControllerTestsBase {
     }
 
     @Test
-    void testDiscovery() throws Exception {
-        perform(request(GET, "/"))
-                .andExpect(status().is2xxSuccessful())
-                .andExpect(content().json(fromFile("/connector/responses/discovery.json")));
-        perform(request(GET, "/discovery/metadata.json"))
-                .andExpect(status().is2xxSuccessful())
-                .andExpect(content().json(fromFile("/connector/responses/metadata.json")));
+    void testDiscovery() throws IOException {
+        String expectedMetadata = fromFile("/connector/responses/metadata.json");
+        // Discovery metadata.json is at the connector root.
+        webClient.get()
+                .uri("/")
+                .headers(ControllerTestsBase::headers)
+                .exchange()
+                .expectStatus().is2xxSuccessful()
+                .expectBody()
+                .json(expectedMetadata);
     }
 
-    @Test
-    void testRegex1() throws Exception {
-        List<String> expected = ImmutableList.of(
-                "BoXeR",
-                "POISON",
-                "concur"
-        );
-        testRegex("app_keywords", fromFile("/regex/email1.txt"), expected);
+    @ParameterizedTest(name = "{index} ==> Email body=''{1}''")
+    @MethodSource("regexTestArgProvider")
+    void testRegex(List<String> expected, String emailBodyFile) throws Exception {
+
+        testRegex("app_keywords", fromFile(emailBodyFile), expected);
     }
 
-    @Test
-    void testRegex2() throws Exception {
-        List<String> expected = ImmutableList.of(
-                "boxer",
-                "poison",
-                "concur"
+    private static Stream<Arguments> regexTestArgProvider() {
+        return Stream.of(
+                Arguments.of(List.of("BoXeR", "POISON", "concur"), "/regex/email1.txt"),
+                Arguments.of(List.of("boxer", "poison", "concur"), "/regex/email2.txt"),
+                Arguments.of(List.of("poison", "concur"), "/regex/email3.txt")
         );
-        testRegex("app_keywords", fromFile("/regex/email2.txt"), expected);
-    }
-
-    @Test
-    void testRegex3() throws Exception {
-        List<String> expected = ImmutableList.of(
-                "poison",
-                "concur"
-        );
-        testRegex("app_keywords", fromFile("/regex/email3.txt"), expected);
     }
 
     @DisplayName("Card request success cases")
     @ParameterizedTest(name = "{index} ==> Request=''{0}'', Language=''{1}''")
     @CsvSource({
-            "request.json, " + StringUtils.EMPTY + ", success.json",
+            "request.json, , success.json",
             "request.json, xx;q=1.0, success_xx.json",
-            "requestDuplicate.json, " + StringUtils.EMPTY + ", success.json"})
-        // Expect DS request only once for each app.
+            "requestDuplicate.json, , success.json"
+    })
+    // Expect DS request only once for each app.
     void testRequestCardsSuccess(String requestFile, String acceptLanguage, String responseFile) throws Exception {
         expectAWRequest("/deviceservices/AppInstallationStatus?Udid=ABCD&BundleId=com.android.boxer")
                 .andRespond(withSuccess(awAppNotInstalled, APPLICATION_JSON));
@@ -142,44 +145,98 @@ class AirWatchControllerTest extends ControllerTestsBase {
         testRequestCards(requestFile, responseFile, acceptLanguage);
     }
 
+    /*
+     * Boxer - Not installed.
+     * Concur - Installed
+     * customer support - Zendesk is not configured for iOS.
+     */
     @Test
-    void testInstallAction() throws Exception {
+    void testRequestCardsSuccessiOS() throws Exception {
+        expectAWRequest("/deviceservices/AppInstallationStatus?Udid=ABCD&BundleId=com.air-watch.boxer")
+                .andRespond(withSuccess(awAppNotInstalled, APPLICATION_JSON));
+        expectAWRequest("/deviceservices/AppInstallationStatus?Udid=ABCD&BundleId=com.concur.concurmobile")
+                .andRespond(withSuccess(awAppInstalled, APPLICATION_JSON));
+        testRequestCards("requestiOS.json", "successiOS.json", null);
+    }
 
-        expectGBSessionRequests();
+    @Test
+    void testInstallAction() throws IOException{
+
+        expectGBSessionRequests("android");
 
         // Search for app "Concur"
-        expectGBRequest(
-                "/catalog-portal/services/api/entitlements?q=Concur",
-                GET, gbCatalogContextCookie("euc123", null))
-                .andRespond(withSuccess().body(gbSearchApp).contentType(HAL_JSON_UTF8));
+        String searchApp = IOUtils.toString(gbSearchApp.getInputStream(), Charset.defaultCharset())
+                .replaceAll("\\$\\{greenbox.url}", mockGreenbox.url(""));
+        mockGreenbox.expect(requestTo("/catalog-portal/services/api/entitlements?q=Concur"))
+                .andExpect(method(GET))
+                .andExpect(header(COOKIE, gbCatalogContextCookies("euc123", null)))
+                .andRespond(withSuccess().body(searchApp).contentType(HAL_JSON_UTF8));
 
         // Trigger install for "MDM-134-Native-Public".
-        expectGBRequest(
-                "/catalog-portal/services/api/activate/MDM-134-Native-Public",
-                POST, gbCatalogContextCookie("euc123", "csrf123"))
-                .andExpect(MockRestRequestMatchers.header("X-XSRF-TOKEN", "csrf123"))
+        mockGreenbox.expect(requestTo("/catalog-portal/services/api/activate/MDM-134-Native-Public"))
+                .andExpect(method(POST))
+                .andExpect(header(COOKIE, gbCatalogContextCookies("euc123", "csrf123")))
+                .andExpect(header("X-XSRF-TOKEN", "csrf123"))
                 .andRespond(withSuccess().body(gbInstallApp).contentType(HAL_JSON_UTF8));
 
-        perform(post("/mdm/app/install").with(token(accessToken()))
+        String uri = "/mdm/app/install";
+        webClient.post()
+                .uri(uri)
+                .header(AUTHORIZATION, "Bearer " + accessToken(uri))
+                .header("X-Connector-Authorization", "Bearer vidm")
                 .contentType(APPLICATION_FORM_URLENCODED)
-                .header("x-airwatch-base-url", AIRWATCH_BASE_URL)
-                .param("app_name", "Concur")
-                .param("udid", "ABCD")
-                .param("platform", "android"))
-                .andExpect(status().isOk());
+                .header(X_BASE_URL_HEADER, mockBackend.url(""))
+                .body(BodyInserters.fromFormData("app_name", "Concur")
+                        .with("udid", "ABCD")
+                        .with("platform", "android"))
+                .exchange()
+                .expectStatus().isOk();
+    }
 
-        mockBackend.verify();
+    @ParameterizedTest(name = "{index} ==> GB Response=''{1}''")
+    @CsvSource({
+            "Browser, searchAppMultipleFound.json",
+            "unassignedMdmApp, searchAppNotFound.json"})
+    void testInstallActionBadRequest(String appName, String gbResponseFile) throws Exception {
+
+        expectGBSessionRequests("Apple");
+
+        mockGreenbox.expect(requestTo("/catalog-portal/services/api/entitlements?q=" + appName))
+                .andExpect(method(GET))
+                .andExpect(header(COOKIE, gbCatalogContextCookies("euc123", null)))
+                .andRespond(withSuccess().body(fromFile("greenbox/responses/" + gbResponseFile))
+                        .contentType(HAL_JSON_UTF8));
+
+        String uri = "/mdm/app/install";
+        webClient.post()
+                .uri(uri)
+                .header(AUTHORIZATION, "Bearer " + accessToken(uri))
+                .header("X-Connector-Authorization", "Bearer vidm")
+                .contentType(APPLICATION_FORM_URLENCODED)
+                .header(X_BASE_URL_HEADER, mockBackend.url(""))
+                .body(BodyInserters.fromFormData("app_name", appName)
+                        .with("udid", "ABCD")
+                        .with("platform", "ios"))
+                .exchange()
+                .expectStatus().isBadRequest();
     }
 
     @Test
     void testMissingRequestHeaders() throws Exception {
-        perform(post("/cards/requests").with(token(accessToken()))
+        String uri = "/cards/requests";
+        webClient.post()
+                .uri(uri)
+                .header(AUTHORIZATION, "Bearer " + accessToken(uri))
+                .header("X-Connector-Authorization", "Bearer vidm")
                 .contentType(APPLICATION_JSON)
                 .accept(APPLICATION_JSON)
                 .header("x-routing-prefix", "https://hero/connectors/airwatch/")
-                .content(fromFile("/connector/requests/request.json")))
-                .andExpect(status().isBadRequest())
-                .andExpect(status().reason(containsString("Missing request header 'x-airwatch-base-url'")));
+                .syncBody(fromFile("/connector/requests/request.json"))
+                .exchange()
+                .expectStatus().isBadRequest()
+                .expectBody().jsonPath("$.message")
+                    .isEqualTo("Missing request header '" + X_BASE_URL_HEADER + "' for method parameter of type String");
+
     }
 
     @ParameterizedTest
@@ -195,102 +252,122 @@ class AirWatchControllerTest extends ControllerTestsBase {
      */
     @Test
     void testRequestCardsForbidden() throws Exception {
-        mockBackend.expect(times(1), requestTo(any(String.class)))
-                .andExpect(MockRestRequestMatchers.header(AUTHORIZATION, "Bearer " + accessToken()))
+        mockBackend.expect(times(2), requestTo(any(String.class)))
+                .andExpect(header(AUTHORIZATION, "Bearer vidm"))
                 .andExpect(method(GET))
                 .andRespond(withStatus(FORBIDDEN).body(awUserForbidden));
-        perform(requestCards("request.json"))
-                .andExpect(status().isBadRequest())
-                .andExpect(content().json(fromFile("connector/responses/forbiddenUdid.json")));
-        mockBackend.verify();
-    }
+        requestCards("request.json")
+                .exchange()
+                .expectStatus().isBadRequest()
+                .expectBody().json(fromFile("connector/responses/forbiddenUdid.json")); }
 
     @Test
     void testRequestCardsOneServerError() throws Exception {
         expectAWRequest("/deviceservices/AppInstallationStatus?Udid=ABCD&BundleId=com.poison.pill")
                 .andRespond(withServerError());
-        perform(requestCards("oneServerError.json"))
-                .andExpect(status().is5xxServerError())
-                .andExpect(header().string("X-Backend-Status", "500"));
-        mockBackend.verify();
+        expectAWRequest("/deviceservices/AppInstallationStatus?Udid=ABCD&BundleId=com.android.boxer")
+                .andRespond(withSuccess(awAppNotInstalled, APPLICATION_JSON));
+        requestCards("oneServerError.json")
+                .exchange()
+                .expectStatus().is5xxServerError()
+                .expectHeader().valueEquals("X-Backend-Status", "500");
     }
 
     @Test
     void testRequestCardsInvalidUdid() throws Exception {
         expectAWRequest("/deviceservices/AppInstallationStatus?Udid=INVALID&BundleId=com.android.boxer")
                 .andRespond(withStatus(NOT_FOUND).body(fromFile("airwatch/responses/udidNotFound.json")));
-        perform(requestCards("invalidUdid.json"))
-                .andExpect(status().isBadRequest())
-                .andExpect(content().json(fromFile("connector/responses/invalidUdid.json")));
+        requestCards("invalidUdid.json")
+                .exchange()
+                .expectStatus().isBadRequest()
+                .expectBody().json(fromFile("connector/responses/invalidUdid.json"));
     }
 
     @Test
     void testRequestForInvalidPlatform() throws Exception {
-        perform(requestCards("invalidPlatform.json"))
-                .andExpect(status().isBadRequest())
-                .andExpect(content().json(fromFile("connector/responses/invalidPlatform.json")));
+        requestCards("invalidPlatform.json")
+                .exchange()
+                .expectStatus().isBadRequest()
+                .expectBody().json(fromFile("connector/responses/invalidPlatform.json"));
 
+    }
+
+    @Test
+    void testGetImage() {
+        webClient.get()
+                .uri("/images/connector.png")
+                .exchange()
+                .expectStatus().isOk()
+                .expectHeader().contentLength(13487)
+                .expectHeader().contentType(IMAGE_PNG_VALUE)
+                .expectBody(byte[].class).isEqualTo(bytesFromFile("/static/images/connector.png"));
     }
 
     private void testRequestCards(String requestFile, String responseFile, String acceptLanguage) throws Exception {
-        MockHttpServletRequestBuilder builder = requestCards(requestFile);
-        if (acceptLanguage != null) {
-            builder = builder.header(ACCEPT_LANGUAGE, acceptLanguage);
+        WebTestClient.RequestHeadersSpec<?> spec = requestCards(requestFile);
+        if (StringUtils.isNotBlank(acceptLanguage)) {
+            spec = spec.header(ACCEPT_LANGUAGE, acceptLanguage);
         }
-        perform(builder)
-                .andExpect(status().isOk())
-                .andExpect(content().contentTypeCompatibleWith(APPLICATION_JSON))
-                .andExpect(content().string(isValidHeroCardConnectorResponse()))
-                .andExpect(content().string(JsonReplacementsBuilder.from(
-                        fromFile("connector/responses/" + responseFile)).buildForCards()));
-    }
+        String body = spec.exchange()
+                .expectStatus().isOk()
+                .expectHeader().contentTypeCompatibleWith(APPLICATION_JSON)
+                .returnResult(String.class)
+                .getResponseBody()
+                .collect(Collectors.joining())
+                .map(JsonNormalizer::forCards)
+                .block();
+        body = body.replaceAll("[a-z0-9]{40,}", "test-hash");
+        assertThat(body,  sameJSONAs(fromFile("connector/responses/" + responseFile)).allowingAnyArrayOrdering());
+     }
 
-    private MockHttpServletRequestBuilder requestCards(String requestfile) throws Exception {
-        return post("/cards/requests").with(token(accessToken()))
+    private WebTestClient.RequestHeadersSpec<?> requestCards(String requestfile) throws IOException {
+        String uri = "/cards/requests";
+        return webClient.post()
+                .uri(uri)
+                .header(AUTHORIZATION, "Bearer " + accessToken(uri))
+                .header("X-Connector-Authorization", "Bearer vidm")
                 .contentType(APPLICATION_JSON)
                 .accept(APPLICATION_JSON)
-                .header("x-airwatch-base-url", AIRWATCH_BASE_URL)
+                .header(X_BASE_URL_HEADER, mockBackend.url(""))
                 .header("x-routing-prefix", "https://hero/connectors/airwatch/")
-                .content(fromFile("/connector/requests/" + requestfile));
+                .syncBody(fromFile("/connector/requests/" + requestfile));
     }
 
     private ResponseActions expectAWRequest(String uri) {
-        return mockBackend.expect(requestTo(AIRWATCH_BASE_URL + uri))
+        return mockBackend.expect(requestTo(uri))
                 .andExpect(method(GET))
-                .andExpect(MockRestRequestMatchers.header(AUTHORIZATION, "Bearer " + accessToken()));
+                .andExpect(header(AUTHORIZATION, "Bearer vidm"));
     }
 
-    private void expectGBSessionRequests() {
+    private void expectGBSessionRequests(String deviceType) {
         // eucToken
-        expectGBRequest(
-                "/catalog-portal/services/auth/eucTokens?deviceUdid=ABCD&deviceType=android",
-                POST, gbHZNCookie(accessToken()))
+        mockGreenbox.expect(requestTo("/catalog-portal/services/auth/eucTokens?deviceUdid=ABCD&deviceType=" + deviceType))
+                .andExpect(method(POST))
+                .andExpect(header(COOKIE, "HZN=vidm"))
                 .andRespond(withStatus(CREATED).body(gbEucToken).contentType(HAL_JSON_UTF8));
 
         // CSRF token
         HttpHeaders csrfHeaders = new HttpHeaders();
         csrfHeaders.set(SET_COOKIE, "EUC_XSRF_TOKEN=csrf123;Path=/catalog-portal;Secure");
-        expectGBRequest(
-                "/catalog-portal/", OPTIONS,
-                gbCatalogContextCookie("euc123", null))
+        mockGreenbox.expect(requestTo("/catalog-portal/services"))
+                .andExpect(method(GET))
+                .andExpect(header(COOKIE, gbCatalogContextCookies("euc123", null)))
                 .andRespond(withSuccess().headers(csrfHeaders));
     }
 
-    private ResponseActions expectGBRequest(String uri, HttpMethod reqMethod, String cookie) {
-        return mockBackend.expect(requestTo(GREENBOX_BASE_URL + uri))
-                .andExpect(method(reqMethod))
-                .andExpect(MockRestRequestMatchers.header(COOKIE, cookie));
+    private String[] gbCatalogContextCookies(String euc, String csrf) {
+        String eucCookie = "USER_CATALOG_CONTEXT=" + euc;
+        String csrfCookie = Optional.ofNullable(csrf).map(cookie -> "EUC_XSRF_TOKEN=" + cookie).orElse(null);
+        return Stream.of(eucCookie, csrfCookie)
+                .filter(Objects::nonNull)
+                .toArray(String[]::new);
     }
 
-    private String gbHZNCookie(String hzn) {
-        return "HZN=" + hzn;
-    }
-
-    private String gbCatalogContextCookie(String euc, String csrf) {
-        String contextCookie = "USER_CATALOG_CONTEXT=" + euc;
-        if (csrf != null) {
-            return contextCookie + "; EUC_XSRF_TOKEN=" + csrf;
+    public static class CustomInitializer implements ApplicationContextInitializer<ConfigurableApplicationContext> {
+        @Override
+        public void initialize(ConfigurableApplicationContext applicationContext) {
+            String gbUrl = AirWatchControllerTest.mockGreenbox.url("");
+            TestPropertySourceUtils.addInlinedPropertiesToEnvironment(applicationContext, "greenbox.url=" + gbUrl);
         }
-        return contextCookie;
     }
 }
