@@ -19,13 +19,14 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.server.reactive.ServerHttpRequest;
+import org.springframework.util.CollectionUtils;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.reactive.function.client.ClientResponse;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
-import javax.servlet.http.HttpServletRequest;
 import javax.validation.Valid;
 import java.util.*;
 
@@ -40,8 +41,8 @@ import static org.springframework.http.MediaType.*;
 @RestController
 public class JiraController {
     private final static Logger logger = LoggerFactory.getLogger(JiraController.class);
-    private final static String JIRA_AUTH_HEADER = "x-jira-authorization";
-    private final static String JIRA_BASE_URL_HEADER = "x-jira-base-url";
+    private final static String JIRA_AUTH_HEADER = "X-Connector-Authorization";
+    private final static String JIRA_BASE_URL_HEADER = "X-Connector-Base-Url";
     private final static String ROUTING_PREFIX = "x-routing-prefix";
 
     private static final int COMMENTS_SIZE = 2;
@@ -62,33 +63,37 @@ public class JiraController {
             @RequestHeader(name = ROUTING_PREFIX) String routingPrefix,
             Locale locale,
             @Valid @RequestBody CardRequest cardRequest,
-            final HttpServletRequest request) {
+            ServerHttpRequest request) {
 
         Set<String> issueIds = cardRequest.getTokens("issue_id");
+
+        if (CollectionUtils.isEmpty(issueIds)) {
+            return Mono.just(new Cards());
+        }
 
         return Flux.fromIterable(issueIds)
                 .flatMap(issueId -> getCardForIssue(jiraAuth, baseUrl, issueId,
                         routingPrefix, locale, request))
                 .collect(Cards::new, (cards, card) -> cards.getCards().add(card))
-                .defaultIfEmpty(new Cards())
-                .subscriberContext(Reactive.setupContext());
+                .defaultIfEmpty(new Cards());
     }
 
     @PostMapping(path = "/api/v1/issues/{issueKey}/comment", consumes = APPLICATION_FORM_URLENCODED_VALUE)
     public Mono<ResponseEntity<Object>> addComment(
             @RequestHeader(name = JIRA_AUTH_HEADER) String jiraAuth,
             @RequestHeader(name = JIRA_BASE_URL_HEADER) String baseUrl,
-            @PathVariable String issueKey, @RequestParam String body) {
+            @PathVariable String issueKey,
+            @Valid AddCommentForm form) {
         logger.debug("Adding jira comments for issue id : {} with Jira server: {}", issueKey, baseUrl);
         return rest.post()
                 .uri(baseUrl + "/rest/api/2/issue/{issueKey}/comment", issueKey)
                 .header(AUTHORIZATION, jiraAuth)
                 .contentType(APPLICATION_JSON)
-                .syncBody(Collections.singletonMap("body", body))
+                .syncBody(Map.of("body", form.getBody()))
                 .retrieve()
                 .bodyToMono(String.class)
-                .map(response -> ResponseEntity.status(CREATED).build())
-                .subscriberContext(Reactive.setupContext());
+                .then(Mono.just(ResponseEntity.status(CREATED).build()));
+
     }
 
     @PostMapping(path = "/api/v1/issues/{issueKey}/watchers")
@@ -103,24 +108,22 @@ public class JiraController {
                 .retrieve()
                 .bodyToMono(JsonDocument.class)
                 .flatMap(body -> addUserToWatcher(body, jiraAuth, baseUrl, issueKey))
-                .map(status -> ResponseEntity.status(status).<Void>build())
-                .subscriberContext(Reactive.setupContext());
+                .map(status -> ResponseEntity.status(status).<Void>build());
     }
 
     @GetMapping("/test-auth")
     public Mono<ResponseEntity<Void>> verifyAuth(@RequestHeader(name = JIRA_AUTH_HEADER) String jiraAuth,
-                                                   @RequestHeader(name = JIRA_BASE_URL_HEADER) String baseUrl) {
+                                                 @RequestHeader(name = JIRA_BASE_URL_HEADER) String baseUrl) {
         return rest.head()
                 .uri(baseUrl + "/rest/api/2/myself")
                 .header(AUTHORIZATION, jiraAuth)
                 .retrieve()
                 .bodyToMono(String.class)
-                .map(ignored -> ResponseEntity.noContent().<Void>build())
-                .subscriberContext(Reactive.setupContext());
+                .then(Mono.just(ResponseEntity.noContent().<Void>build()));
     }
 
     private Mono<HttpStatus> addUserToWatcher(JsonDocument jiraUserDetails, String jiraAuth,
-                                                              String baseUrl, String issueKey) {
+                                              String baseUrl, String issueKey) {
         String user = jiraUserDetails.read("$.name");
         return rest.post()
                 .uri(baseUrl + "/rest/api/2/issue/{issueKey}/watchers", issueKey)
@@ -136,7 +139,7 @@ public class JiraController {
                                        String issueId,
                                        String routingPrefix,
                                        Locale locale,
-                                       HttpServletRequest request) {
+                                       ServerHttpRequest request) {
         return getIssue(jiraAuth, baseUrl, issueId)
                 // if an issue is not found, we'll just not bother creating a card
                 .onErrorResume(Reactive::skipOnNotFound)
@@ -164,7 +167,7 @@ public class JiraController {
                                         String issueId,
                                         String routingPrefix,
                                         Locale locale,
-                                        HttpServletRequest request) {
+                                        ServerHttpRequest request) {
         String issueKey = jiraResponse.read("$.key");
         String summary = jiraResponse.read("$.fields.summary");
         List<String> fixVersions = jiraResponse.read("$.fields.fixVersions[*].name");
@@ -178,7 +181,7 @@ public class JiraController {
 
         CardBody.Builder cardBodyBuilder = new CardBody.Builder()
                 .addField(buildGeneralBodyField("project", jiraResponse.read("$.fields.project.name"), locale))
-                .addField(buildGeneralBodyField("components", String.join(",", components),locale))
+                .addField(buildGeneralBodyField("components", String.join(",", components), locale))
                 .addField(buildGeneralBodyField("priority", jiraResponse.read("$.fields.priority.name"), locale))
                 .addField(buildGeneralBodyField("status", jiraResponse.read("$.fields.status.name"), locale))
                 .addField(buildGeneralBodyField("resolution", jiraResponse.read("$.fields.resolution.name"), locale))
